# pathrc

./: Cargo.toml  LICENSE  README.md  path-rc.sh
.github/: dependabot.yml
.github/workflows/: build.yml  rust.yml
findrc/: Cargo.toml
findrc/src/: .path-rc  findrc.rs  lib.rs  main.rs  test.rs
findrc/tests/: integration.rs  test.rs
init/: pathrc.bash  pathrc.fish  pathrc.zsh
pathrc/: .path-rc  Cargo.toml
pathrc/src/: command.rs  command_handler.rs  lib.rs  main.rs  mod.rs
pathrc/tests/: integration.rs
src/: collate.rs  common.rs  init.rs  list.rs  main.rs  pathrc.rs
